bugfix from textoverflow

--- a/src/_text.scss
+++ b/src/_text.scss
@@ -2,8 +2,9 @@
 @mixin text-overflow($inWidth,$inHeight) {
   max-width: $inWidth;
   height: $inHeight;
-  overflow: hidden;
-  text-overflow: ellipsis;
   white-space: nowrap;
+  text-overflow: ellipsis;
+  vertical-align: middle;
+  overflow: hidden;
 }
 /*text End*/
